# Snap_Organizer

./: .gitignore  ErrorHandling.md  README.md  index.html  package-lock.json  package.json  requirements.md  tailwind.config.js  tsc-errors2.txt  vercel.json  vite.config.ts
api/: vision-ocr.ts
pages/api/: vision-ocr.ts
patches/: exif-js+2.3.0.patch
public/: manifest.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  search_engine.rs
src/components/: AdvancedSearchModal.tsx  ItemCard.tsx  LocationEditorModal.tsx  LocationMap.tsx  NavigationModal.tsx  PhotoGalleryModal.tsx  SearchBar.tsx  SyncScreen.tsx  TagChip.tsx
src/components/screens/: AddGroupScreen.tsx  AddScreen.tsx  DetailGroupScreen.tsx  DetailScreen.tsx  HomeScreen.tsx  UnifiedAddScreen.tsx
src/constants/: tags.ts
src/hooks/: usePostalItems.ts  usePostalTags.ts  useSearch.ts
src/pkg/: package.json  your_wasm_pkg.d.ts  your_wasm_pkg.js  your_wasm_pkg_bg.wasm  your_wasm_pkg_bg.wasm.d.ts
src/types/: index.ts
src/utils/: imageDB.ts  imageResize.d.ts  imageResize.ts  locationConverter.ts  navigation.ts  normalizeOcrText.ts  ocr.ts  rustImageResize.ts  share.ts  storage.ts  syncUtils.ts
your-wasm-pkg/: Cargo.toml
your-wasm-pkg/src/: lib.rs
