[package]
name = "your-wasm-pkg"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.24"
kamadak-exif = "0.6.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
base64 = "0.21"
console_error_panic_hook = "0.1"
